<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_reseau"
            android:icon="@drawable/router"
            android:title="@string/menu_reseau" />
        <item
            android:id="@+id/nav_telecom"
            android:icon="@drawable/cell_tower"
            android:title="@string/menu_Telecom" />
        <item
            android:id="@+id/nav_memos"
            android:icon="@drawable/notes"
            android:title="@string/menu_memos" />
    </group>
</menu>