<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reseau.ReseauFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/attenuationfibreLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/convertisseur_icon"
                android:layout_width="0dp"
                android:layout_height="@dimen/list_height"
                android:layout_weight="10"
                android:src="@drawable/cable"
                android:layout_marginRight="45dp"
                android:layout_marginLeft="@dimen/marging_left_icons"
                android:scaleType="fitCenter"
                app:tint="?attr/iconTintColor"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/list_height"
                android:layout_weight="80"
                android:gravity="left|center"
                android:paddingLeft="30dp"
                android:text="@string/outil_fibreatt"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/attenuationcuivreLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <ImageView
                android:id="@+id/calcuator_icon"
                android:layout_width="0dp"
                android:layout_height="@dimen/list_height"
                android:layout_marginLeft="@dimen/marging_left_icons"
                android:layout_marginRight="45dp"
                android:layout_weight="10"
                android:scaleType="fitCenter"
                android:src="@drawable/cable"
                app:tint="?attr/iconTintColor"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/list_height"
                android:layout_weight="80"
                android:gravity="left|center"
                android:paddingLeft="30dp"
                android:text="@string/outil_cuivreatt"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/megohmLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/list_height"
                android:layout_marginLeft="@dimen/marging_left_icons"
                android:layout_marginRight="45dp"
                android:layout_weight="10"
                android:scaleType="fitCenter"
                android:src="@drawable/multimeter"
                app:tint="?attr/iconTintColor" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/list_height"
                android:layout_weight="80"
                android:gravity="left|center"
                android:paddingLeft="30dp"
                android:text="@string/outil_megohm"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/trouverpaireLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/list_height"
                android:layout_marginLeft="@dimen/marging_left_icons"
                android:layout_marginRight="45dp"
                android:layout_weight="10"
                android:scaleType="fitCenter"
                android:src="@drawable/couleurs" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/list_height"
                android:layout_weight="80"
                android:gravity="left|center"
                android:paddingLeft="30dp"
                android:text="@string/outil_trouverpaire"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rdegLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/list_height"
                android:layout_marginLeft="@dimen/marging_left_icons"
                android:layout_marginRight="45dp"
                android:layout_weight="10"
                android:scaleType="fitCenter"
                android:src="@drawable/grid"
                app:tint="?attr/iconTintColor"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/list_height"
                android:layout_weight="80"
                android:gravity="left|center"
                android:paddingLeft="30dp"
                android:text="@string/outil_rdeg"
                app:tint="?attr/iconTintColor"/>
        </LinearLayout>



    </LinearLayout>
</androidx.core.widget.NestedScrollView>